--- a/warofsix/main/static/style/battle.css
+++ b/warofsix/main/static/style/battle.css
@@ -11,16 +11,17 @@
     width: 70%;
     min-width: 800px;
     column-gap: 5px;
-    align-items: center;
+    align-self: stretch;
 }
 
 .troop-grid-item{
     display: flex;
     flex-direction: column;
     width: 180px;
-    height: 65px;
+    min-height: 65px;
     align-items: center;
     justify-items: center;
+    justify-content: center;
     border-radius: 5px;
     border: 2px dashed black;
     padding: 3px;
@@ -32,5 +33,12 @@
     width: 70%;
     min-width: 800px;
     column-gap: 5px;
-    align-items: center;
+    align-items: stretch;
+}
+
+.nonex{
+    font-size: 3rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+
 }
