--- a/warofsix/main/static/style/main.css
+++ b/warofsix/main/static/style/main.css
@@ -8,6 +8,51 @@ a:visited{
 
 
 
+/* ----------- INDEX PAGE -------------------  */
+
+.section{
+    position: relative;
+    width: 100%;
+    height: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.section h1{
+    text-align: center;
+    font-size: 3rem;
+    font-family: 'Times New Roman', Times, serif;
+    background: #fff;
+    padding: 20px;
+    margin: 15px;
+    z-index: 1;
+    opacity: 0.6;
+    border-radius: 10px;
+
+}
+
+.video-container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+
+.color-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    width: 100%;
+    height: 100vh;
+    opacity: 0.4;
+}
+
+
+
 .body {
     background: rgb(185, 215, 231);
     font-family: 'Garamond';
@@ -188,11 +233,11 @@ a:visited{
 
 .encampment-container{
     display: flex;
-    width: 90%;
+    width: 100%;
     justify-items: center;
-    column-gap: 20px;
-    justify-content: space-between;
-    overflow: auto;
+    column-gap: 10px;
+    /* justify-content: space-between; */
+    /* overflow: auto; */
     
 }
 
@@ -202,7 +247,7 @@ a:visited{
     /* align-content: baseline; */
     width: 30%;
     min-width: 250px;
-    max-width: 300px;
+    max-width: 460px;
     column-gap: 5px;
     row-gap: 5px;
     flex-wrap: wrap;
@@ -221,8 +266,9 @@ a:visited{
     background: #99EDC3;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    width: 140px;
+    width: 100px;
     /* height: 130px; */
+    font-size: 0.8rem;
 
 }
 
@@ -337,3 +383,18 @@ a:visited{
 select option {
     text-align: center;
   }
+
+
+.two-container{
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+}
+
+.defend-grup{
+    width: 45%;
+}
+
+.attack-grup{
+    width: 45%;
+}
